# bento

./: .dockerignore  .gitignore  DEVELOPMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
scripts/: setup-display.sh
src/: main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_keys.rs  db.rs  docker.rs  jira.rs  main.rs  notes.rs  pty.rs  scripts.rs  traffic_lights.rs  web_panel.rs  window_prefs.rs  workspace_io.rs
src/adapters/: IptvOrgChannelRepository.ts  LocalStorageFavoritesRepository.ts  LocalStorageWorkspaceStateRepository.ts  M3UChannelRepository.ts
src/app/: createSessionManager.ts  createWorkspaceView.ts
src/assets/: tv.m3u
src/core/ai/: providers.ts
src/core/channel/: Channel.ts  buildChannels.ts  channelFilters.ts  favorites.ts  filterChannels.ts  filterOptions.ts  isEmbedUrl.ts  mergeChannelData.ts  mergeStreams.ts  normalizeGroup.ts  parseM3U.ts  pickSubtitleTrack.ts  playbackMode.ts  translate.ts
src/core/command/: command.ts
src/core/db/: credentials.ts  dbKind.ts  dbServer.ts  dockerPs.ts  exposedPorts.ts  hostPort.ts  serverKind.ts
src/core/docker/: containers.ts  logFilter.ts
src/core/http/: collections.ts  httpRequest.ts  openapi.ts
src/core/jira/: auth.ts  bulk.ts  issues.ts  jql.ts  urls.ts
src/core/notes/: noteFile.ts  noteTitle.ts  renderMarkdown.ts  undoStack.ts
src/core/scripts/: scriptCommand.ts
src/floating/: mini-player.ts
src/panels/: panelLockPreference.ts  registry.ts
src/ports/: ChannelRepository.ts  FavoritesRepository.ts  WorkspaceStateRepository.ts
src/types/: index.ts
src/ui/: aiKeysDialog.ts  commandPalette.ts  contextMenu.ts  decorationsPreference.ts  icons.ts  masterDetail.ts  platform.ts  sessionBarPreference.ts  windowControls.ts
src/workspace/: layout.test.ts  layout.ts  manager.ts  types.ts
tests/core/: commandPalette.test.ts
tests/helpers/: channelFactory.ts  workspaceFactory.ts
tests/panels/: registry.test.ts
tests/ui/: decorationsPreference.test.ts  sessionBarPreference.test.ts
(+110 files in other folders)
