[package]
name = "bento"
version = "0.0.1"
description = "Modular desktop workspace"
authors = ["Bento Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
mongodb = "2.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
